# second_brain

./: .gitignore  README.md  capstone_assessment.html  capstone_assessment.json  evaluation_results.json  main.py  otel_setup.py  pyproject.toml  requirements.txt
core/: RAGSystem.py  agents.py  controller_agent.py  conversation_memory.py  guardrails.py  logger.py  observability.py  orchestrator.py  preference_detector.py  presidio_engine.py  researcher.py  synthesiser.py  utils.py
core/models/: Preference.py
evaluation/: baseline_bot.py  baseline_evals.py  evaluators.py  synthesis_safety_evals.py  test_cases.py
notes/: indian_recipe.txt  movie.txt  plants.txt
