[project]
name = "second-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.0",
    "faiss-cpu>=1.12.0",
    "openai>=2.6.1",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pydantic-ai[logfire]>=1.9.1",
    "pydantic-ai-slim[logfire]>=1.9.1",
    "pydantic-evals>=1.9.1",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.7",
    "opentelemetry-exporter-otlp>=1.38.0",
]
