[project]
name = "second-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.0",
    "faiss-cpu>=1.12.0",
    "openai>=2.6.1",

    # Observability
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-exporter-otlp>=1.38.0",

    # Pydantic AI
    "pydantic-ai[logfire]>=1.9.1",
    "pydantic-ai-slim[logfire]>=1.9.1",
    "pydantic-evals>=1.9.1",

    # NLP
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.7",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",

   
    # Privacy
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # LangChain
    "langchain-text-splitters>=0.2.0",

    # UX
    "rich>=14.2.0",
]
